# AyeAye

./: .gitignore  CHANGELOG.md  NOTICE  Pipfile  README.md  setup.cfg  setup.py
ayeaye/: __init__.py  connect.py  connect_resolve.py  dependency.py  ignition.py  model.py  pinnate.py
ayeaye/common_pattern/: manifest.py
ayeaye/connectors/: __init__.py  base.py  bigquery.py  csv_connector.py  fake.py  flowerpot.py  gcs_flowerpot.py  json_connector.py  kafka_connector.py  models_connector.py  multi_connector.py  ndjson_connector.py  parquet_connector.py  sqlalchemy_database.py  uncooked_connector.py
doc/source/: concepts.rst  conf.py  first_steps.rst  index.rst  intro.rst  reference.rst  todo.rst
examples/: favourite_colours.py  manifest_mapper.py  noaa_climatology.py  poisonous_animals.py
examples/data/: animals_manifest.json  aquatic_animals.json  favourite_colours.csv  favourite_colours_bad_data.csv  poisonous_animals.flowerpot  poisonous_animals.json  poisonous_animals.ndjson
examples/manifest_build_context/: manifest_file.json  (+1 more)
tests/: test_connect.py  test_connectors.py  test_connectors_csv.py  test_connectors_kafka.py  test_connectors_models.py  test_connectors_multi.py  test_connectors_ndjson.py  test_connectors_parquet.py  test_connectors_registry.py  test_connectors_restful.py  test_connectors_sqlalchemy.py  test_connectors_uncooked.py  test_dependency.py  test_examples.py  test_ignition.py  test_model_collection.py  test_model_locking.py  test_model_partitioned.py  test_models.py  test_pinnate.py  test_resolvers.py  test_runtime_multiprocess.py
(+70 files in other folders)
