[metadata]
name = ayeaye
version = 0.0.56
author = Si Parker
author_email = ayeaye@plogic.co.uk
description = An ETL (Extract, Transform, Load) framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aye-Aye-Dev/AyeAye
project_urls =
    Bug Tracker = https://github.com/Aye-Aye-Dev/AyeAye/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
package_dir =
    = lib

[options.packages.find]
where = lib

[options.extras_require]
api =
    requests
compression =
    smart-open
aws =
    boto3
    smart-open
